--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -162,5 +162,15 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ID IC Card Test"
+            android:id="@+id/btnIDICCard_Test"
 
+            android:onClick="ID_ICCard_Test_click" />
+    </LinearLayout>
 </LinearLayout>
