--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-
-    android:orientation="vertical"
+    android:orientation="vertical" >
     tools:context="firich.com.firichsdk_test.MainActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
@@ -14,25 +13,20 @@
         android:layout_height="wrap_content"
         android:text="open"
         android:id="@+id/open"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
+
         android:onClick="open_click" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="write"
         android:id="@+id/write"
-        android:onClick="write_click"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/open" />
+        android:onClick="write_click" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="close"
         android:id="@+id/close"
-        android:onClick="close_click"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/write" />
+        android:onClick="close_click" />
     </LinearLayout>
 <!--
     <LinearLayout
@@ -82,25 +76,19 @@
         android:layout_height="wrap_content"
         android:text="SC Test Version"
         android:id="@+id/SC_Test_Version"
-        android:layout_below="@+id/txtDataReceiveNFC"
-        android:layout_alignParentStart="true"
         android:onClick="SC_Test_Version_click" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="SC Test Activation"
         android:id="@+id/SC_Test_Activation"
-        android:onClick="SC_Test_Activation_click"
-        android:layout_alignTop="@+id/SC_Test_Version"
-        android:layout_toEndOf="@+id/SC_Test_Version" />
+        android:onClick="SC_Test_Activation_click" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="SC Test Deactivation"
         android:id="@+id/SC_Test_Deactivation"
-        android:onClick="SC_Test_Deactivation_click"
-        android:layout_alignTop="@+id/SC_Test_Activation"
-        android:layout_toEndOf="@+id/SC_Test_Activation" />
+        android:onClick="SC_Test_Deactivation_click" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -172,5 +160,16 @@
             android:id="@+id/btnIDICCard_Test"
 
             android:onClick="ID_ICCard_Test_click" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Finger Printer Test"
+            android:id="@+id/btnFingerPrinter_Test"
+
+            android:onClick="FingerPrinter_Test_click" />
     </LinearLayout>
 </LinearLayout>
