--- a/app/src/main/res/layout/activity_idiccard.xml
+++ b/app/src/main/res/layout/activity_idiccard.xml
@@ -119,6 +119,42 @@
             </TextView>
         </ScrollView>
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/linearLayoutPASSFAIL"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_weight="5" >
 
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="PASS"
+                android:textAllCaps="false"
+                android:id="@+id/cmdReturnOK"
+                android:layout_gravity="center"
+                android:onClick="cmdReturnPASS_Click" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_weight="5" >
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="FAIL"
+                android:textAllCaps="false"
+                android:id="@+id/cmdReturnError"
+                android:layout_gravity="center"
+                android:onClick="cmdReturnFAIL_Click" />
+        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
