--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,73 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="#aaaaaa"
     android:orientation="vertical" >
-    tools:context="firich.com.firichsdk_test.MainActivity">
+
+    <LinearLayout
+        android:id="@+id/linearLayoutFactory"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <TextView
+            android:id="@+id/status_text"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="#000000"
+            android:gravity="center_vertical|center_horizontal"
+            android:text="Factory Test"
+            android:textColor="#FFFFFF" />
+
+    </LinearLayout>
 
     <!--
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="open"
-        android:id="@+id/open"
-        android:onClick="open_click" />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="write"
-        android:id="@+id/write"
-        android:onClick="write_click" />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="close"
-        android:id="@+id/close"
-        android:onClick="close_click" />
-    </LinearLayout>
-    -->
-<!--
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="nfc test"
-        android:id="@+id/nfc_test"
-        android:layout_below="@+id/open"
-        android:layout_alignParentStart="true"
-        android:onClick="nfc_test_click" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Open NFC"
-        android:id="@+id/OpenNFC"
-        android:layout_below="@+id/nfc_test"
-        android:layout_alignParentStart="true"
-        android:onClick="OpenNFC_click" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Close NFC"
-        android:id="@+id/CloseNFC"
-        android:layout_alignTop="@+id/OpenNFC"
-        android:layout_toEndOf="@+id/OpenNFC"
-        android:onClick="CloseNFC_click" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/txtDataReceiveNFC"
-        android:layout_below="@+id/OpenNFC"
-        android:text=" "
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    </LinearLayout>
--->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
@@ -120,6 +73,8 @@
             android:text=" "
             android:textAppearance="?android:attr/textAppearanceLarge" />
     </LinearLayout>
+    -->
+    <!--
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
@@ -147,45 +102,89 @@
         android:layout_height="wrap_content"
         android:text="Value="
         android:textAppearance="?android:attr/textAppearanceLarge" />
-        <!--
-    <EditText
-        android:id="@+id/editTextGPIO"
-        android:layout_width="72dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="text"
-        android:text="" />
-
-
-        -->
 
     </LinearLayout>
-
+    -->
     <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="600sp"
+            android:layout_height="wrap_content"
+            android:text="IC Card(SysKing) Test"
+            android:id="@+id/btnCashDrawer_Test"
+            android:onClick="IC_Card_SysKing_Test_click" />
+        <TextView
+            android:id="@+id/textViewICCardSysKingTestResult"
+            android:layout_width="100sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="\?"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+        <Button
+            android:layout_width="600sp"
+            android:layout_height="wrap_content"
+            android:text="Cash Drawer Test"
+            android:id="@+id/btnCashDrawer_Test"
+            android:onClick="CashDrawer_Test_click" />
+        <TextView
+            android:id="@+id/textViewCashDrawerTestResult"
+            android:layout_width="100sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="\?"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+        <Button
+            android:layout_width="600sp"
             android:layout_height="wrap_content"
             android:text="ID IC Card Test"
             android:id="@+id/btnIDICCard_Test"
-
             android:onClick="ID_ICCard_Test_click" />
+        <TextView
+            android:id="@+id/textViewIDICCardTestResult"
+            android:layout_width="100sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="\?"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
     </LinearLayout>
     <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="600sp"
             android:layout_height="wrap_content"
             android:text="Finger Printer Test"
             android:id="@+id/btnFingerPrinter_Test"
 
             android:onClick="FingerPrinter_Test_click" />
+        <TextView
+            android:id="@+id/textViewFingerPrintTestResult"
+            android:layout_width="100sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="\?"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
     </LinearLayout>
     <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        >
+        <!--
         <EditText
             android:id="@+id/editTextTTY_LCMUSBPath"
             android:layout_width="wrap_content"
@@ -194,35 +193,94 @@
             android:ems="10"
             android:inputType="text"
             android:text="/dev/ttyUSB2" />
+            -->
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="600sp"
             android:layout_height="wrap_content"
             android:text="LCM Test"
             android:id="@+id/btnLCM_Test"
-
             android:onClick="LCM_Test_click" />
-        <!--
         <TextView
             android:id="@+id/textViewLCMTestResult"
-            android:layout_width="wrap_content"
+            android:layout_width="100sp"
             android:layout_height="wrap_content"
-            android:text="VFD/LCM Test Result:"
+            android:layout_weight="2"
+            android:text="\?"
             android:textAppearance="?android:attr/textAppearanceLarge" />
-            -->
     </LinearLayout>
     <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-
+        android:layout_height="wrap_content"
+        >
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="600sp"
             android:layout_height="wrap_content"
             android:text="NFC Test"
             android:id="@+id/btnNFC_Test"
-
             android:onClick="NFC_Test_click" />
+        <TextView
+            android:id="@+id/textViewNFCTestResult"
+            android:layout_width="100sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="\?"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+        <Button
+            android:layout_width="600sp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:text="Thermal Printer Test"
+            android:id="@+id/btnThermalPrinter_Test"
+            android:onClick="ThermalPrinter_Test_click" />
+        <TextView
+            android:id="@+id/textViewThermalPrinterTestResult"
+            android:layout_width="100sp"
+            android:layout_height="wrap_content"
+            android:text="\?"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+        <Button
+            android:layout_width="600sp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:text="RFID Test"
+            android:id="@+id/btnRFID_Test"
+            android:onClick="RFID_Test_click" />
+        <TextView
+            android:id="@+id/textViewRFIDTestResult"
+            android:layout_width="100sp"
+            android:layout_height="wrap_content"
+            android:text="\?"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+        <Button
+            android:layout_width="600sp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:text="HID Input Test"
+            android:id="@+id/btnHID_Test"
+            android:onClick="HID_Test_click" />
+        <TextView
+            android:id="@+id/textViewHIDTestResult"
+            android:layout_width="100sp"
+            android:layout_height="wrap_content"
+            android:text="\?"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
     </LinearLayout>
 </LinearLayout>
