--- a/app/src/main/res/layout/activity_rfid.xml
+++ b/app/src/main/res/layout/activity_rfid.xml
@@ -7,7 +7,7 @@
 
 
     <LinearLayout
-        android:id="@+id/linearLayoutNFC"
+        android:id="@+id/linearLayoutRFID"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
@@ -17,17 +17,17 @@
             android:layout_height="wrap_content"
             android:background="#000000"
             android:gravity="center_vertical|center_horizontal"
-            android:text="NFC Test"
+            android:text="RFID Test"
             android:textColor="#FFFFFF" />
 
     </LinearLayout>
     <LinearLayout
-        android:id="@+id/linearLayoutBottom"
+        android:id="@+id/linearLayoutBottomRFID"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
         <EditText
-            android:id="@+id/editNFC_usb_path"
+            android:id="@+id/editRFID_usb_path"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
@@ -38,40 +38,15 @@
             android:text="/dev/ttyUSB4" />
     </LinearLayout>
     <LinearLayout
-        android:id="@+id/linearLayoutBottom2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content" >
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Start RFID Test"
+            android:id="@+id/btnRFID_Test"
 
-        <Button
-            android:id="@+id/btn_getFirmwareVer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="E1:回傳軔體版本"
-            android:gravity="center_vertical|center_horizontal"
-            android:onClick="NFC_GetFirmwareVer_click" />
-        <Button
-            android:id="@+id/btnA0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="A0:讀取卡片並連續傳回卡號"
-            android:gravity="center_vertical|center_horizontal"
-            android:onClick="NFC_A0_cmd_click" />
-        <Button
-            android:id="@+id/btnA1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="A1:讀取卡片並傳回卡號"
-            android:gravity="center_vertical|center_horizontal"
-            android:onClick="NFC_A1_cmd_click" />
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="A9:讀取卡片並傳回卡號和類型"
-            android:id="@+id/btnA9"
-            android:gravity="center_vertical|center_horizontal"
-            android:onClick="NFC_A9_cmd_click" />
-
+            android:onClick="RFID_Test_click" />
     </LinearLayout>
     <LinearLayout
         android:id="@+id/linearLayoutEditText"
@@ -84,14 +59,14 @@
         android:orientation="vertical" >
         <ScrollView
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="200dp"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
             android:background="#ffffff" >
             <TextView
-                android:id="@+id/NFC_ReturnMessage"
+                android:id="@+id/RFID_ReturnMessage"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:text=""
@@ -102,7 +77,7 @@
         </ScrollView>
     </LinearLayout>
     <LinearLayout
-        android:id="@+id/linearLayoutBottomPASSFAIL"
+        android:id="@+id/linearLayoutRFIDPASSFAIL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -114,28 +89,28 @@
             android:gravity="center"
             android:layout_weight="5" >
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="PASS"
-            android:textAllCaps="false"
-            android:id="@+id/cmdReturnOK"
-            android:layout_gravity="center"
-            android:onClick="cmdReturnPASS_Click" />
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="PASS"
+                android:textAllCaps="false"
+                android:id="@+id/cmdReturnOK"
+                android:layout_gravity="center"
+                android:onClick="cmdReturnPASS_Click" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_weight="5" >
-         <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="FAIL"
-            android:textAllCaps="false"
-            android:id="@+id/cmdReturnError"
-            android:layout_gravity="center"
-            android:onClick="cmdReturnFAIL_Click" />
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="FAIL"
+                android:textAllCaps="false"
+                android:id="@+id/cmdReturnError"
+                android:layout_gravity="center"
+                android:onClick="cmdReturnFAIL_Click" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
