--- a/app/src/main/res/layout/activity_idiccard.xml
+++ b/app/src/main/res/layout/activity_idiccard.xml
@@ -5,6 +5,21 @@
     android:background="#aaaaaa"
     android:orientation="vertical" >
 
+    <LinearLayout
+        android:id="@+id/linearLayoutThermalPrinterD10"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <TextView
+            android:id="@+id/status_text_IDTech"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="#000000"
+            android:gravity="center_vertical|center_horizontal"
+            android:text="IDTech IC Card Test"
+            android:textColor="#FFFFFF" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayoutBottom"
@@ -15,7 +30,7 @@
             android:id="@+id/status_text"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="#000000"
+            android:background="#aaaaaa"
             android:gravity="center_vertical|center_horizontal"
             android:text="MINISMARTII DISCONNECTED"
             android:textColor="#FFFFFF" />
