--- a/app/src/main/res/layout/activity_lcm.xml
+++ b/app/src/main/res/layout/activity_lcm.xml
@@ -23,7 +23,9 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:descendantFocusability="beforeDescendants"
+        android:focusableInTouchMode="true">
         <EditText
             android:id="@+id/editTextTTY_LCMUSBPath"
             android:layout_width="wrap_content"
@@ -34,9 +36,6 @@
             android:textColor="#000000"
             android:inputType="text"
             android:text="/dev/ttyUSB2" />
-<!--
-
--->
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
