--- a/app/src/main/res/layout/activity_main_finger_printer.xml
+++ b/app/src/main/res/layout/activity_main_finger_printer.xml
@@ -10,6 +10,22 @@ android:orientation="vertical">
     android:orientation="vertical"
     android:padding="10dp" >
 
+    <LinearLayout
+        android:id="@+id/linearLayoutThermalPrinterD10"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <TextView
+            android:id="@+id/status_text"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="#000000"
+            android:gravity="center_vertical|center_horizontal"
+            android:text="Finger Printer Test"
+            android:textColor="#FFFFFF" />
+
+    </LinearLayout>
+
     <TextView
         	  android:id="@+id/selected_device"
         	  android:layout_width="wrap_content"
