--- a/app/src/main/res/layout/activity_rfid.xml
+++ b/app/src/main/res/layout/activity_rfid.xml
@@ -25,6 +25,8 @@
         android:id="@+id/linearLayoutBottomRFID"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:descendantFocusability="beforeDescendants"
+        android:focusableInTouchMode="true"
         >
         <EditText
             android:id="@+id/editRFID_usb_path"
