--- a/app/src/main/res/layout/activity_sii_d10_thermal_printer.xml
+++ b/app/src/main/res/layout/activity_sii_d10_thermal_printer.xml
@@ -3,7 +3,9 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#aaaaaa"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true">
 
 <LinearLayout
         android:id="@+id/linearLayoutThermalPrinterD10"
