--- a/app/src/main/res/layout/activity_sys_king_iccard.xml
+++ b/app/src/main/res/layout/activity_sys_king_iccard.xml
@@ -24,7 +24,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:descendantFocusability="beforeDescendants"
+        android:focusableInTouchMode="true">
         <EditText
             android:id="@+id/editTextTTYUSBPath"
             android:layout_width="wrap_content"
