--- a/app/src/main/res/layout/activity_thermal_printer.xml
+++ b/app/src/main/res/layout/activity_thermal_printer.xml
@@ -3,7 +3,24 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#aaaaaa"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true">
+    <LinearLayout
+        android:id="@+id/linearLayoutThermalPrinterD10"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <TextView
+            android:id="@+id/status_text"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="#000000"
+            android:gravity="center_vertical|center_horizontal"
+            android:text="Thermal Printer Test"
+            android:textColor="#FFFFFF" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
