--- a/app/src/main/res/layout-land/activity_engine.xml
+++ b/app/src/main/res/layout-land/activity_engine.xml
@@ -12,7 +12,21 @@ android:layout_height="match_parent">
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="10dp" >
+        <LinearLayout
+            android:id="@+id/linearLayout_fp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <TextView
+                android:id="@+id/status_text_finger_printer"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="#000000"
+                android:gravity="center_vertical|center_horizontal"
+                android:text="Finger Printer Test"
+                android:textColor="#FFFFFF" />
 
+        </LinearLayout>
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
