1. Thermal Printer DTP-220: Refined UI. Combined Authentication and Connect functions.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -118,7 +118,7 @@
         <Button
             android:layout_width="600sp"
             android:layout_height="wrap_content"
-            android:text="LCM Test"
+            android:text="VFD LCM Test"
             android:id="@+id/btnLCM_Test"
             android:onClick="LCM_Test_click" />
         <TextView
