1. Refined test flow and UI.

--- a/app/src/main/res/layout/activity_rfid.xml
+++ b/app/src/main/res/layout/activity_rfid.xml
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:text="Start RFID Test"
             android:id="@+id/btnRFID_Test"
-
+            android:enabled="false"
             android:onClick="RFID_Test_click" />
     </LinearLayout>
     <LinearLayout
