--- a/app/src/main/res/layout/activity_nfc.xml
+++ b/app/src/main/res/layout/activity_nfc.xml
@@ -34,9 +34,10 @@
             android:layout_height="wrap_content"
             android:textSize="14sp"
             android:ems="10"
-            android:background="#FFFFFF"
+            android:background="#aaaaaa"
             android:textColor="#000000"
             android:inputType="text"
+            android:editable="false"
             android:text="/dev/ttyUSB4" />
     </LinearLayout>
     <LinearLayout
