--- a/app/src/main/res/layout/activity_sys_king_iccard.xml
+++ b/app/src/main/res/layout/activity_sys_king_iccard.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#aaaaaa"
+    android:background="#555555"
     android:orientation="vertical" >
 
 
@@ -33,8 +33,9 @@
             android:layout_height="wrap_content"
             android:textSize="14sp"
             android:ems="10"
-            android:background="#FFFFFF"
+            android:background="#aaaaaa"
             android:textColor="#000000"
+            android:editable="false"
             android:inputType="text"
             android:text="/dev/ttyUSB4" />
 
@@ -48,6 +49,7 @@
             android:layout_height="wrap_content"
             android:text="Test IC Card"
             android:id="@+id/SC_Test_Version"
+            android:enabled="false"
             android:onClick="Test_IC_Card_click" />
     </LinearLayout>
     <!--
