--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,11 +2,12 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="#555555">
 <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#aaaaaa"
+    android:background="#555555"
     android:orientation="vertical" >
 
     <LinearLayout
