1. log test result.

--- a/app/src/main/res/layout/activity_nfc.xml
+++ b/app/src/main/res/layout/activity_nfc.xml
@@ -54,12 +54,14 @@
                    android:gravity="center_vertical|center_horizontal"
                    android:onClick="NFC_GetFirmwareVer_click" />
 
+
                <Button
                    android:id="@+id/btnA0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="A0:讀取卡片並連續傳回卡號"
                    android:gravity="center_vertical|center_horizontal"
+                   android:enabled="false"
                    android:onClick="NFC_A0_cmd_click" />
                    -->
         <Button
