--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,15 +14,18 @@
         android:id="@+id/linearLayoutFactory"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         >
         <TextView
             android:id="@+id/status_text"
-            android:layout_width="fill_parent"
+            android:layout_width="500sp"
             android:layout_height="wrap_content"
             android:background="#000000"
+            android:layout_weight="6"
             android:gravity="center_vertical|center_horizontal"
             android:text="Factory Test"
             android:textColor="#FFFFFF" />
+
 
     </LinearLayout>
 
