--- a/app/src/main/res/layout/activity_thermal_printer.xml
+++ b/app/src/main/res/layout/activity_thermal_printer.xml
@@ -26,13 +26,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <!--
+
         <Button
             android:id="@+id/btnUsbAuthentication"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="invisible"
             android:text="USB Authentication" />
--->
+
         <Button
             android:id="@+id/btnUsbConnect"
             android:layout_width="wrap_content"
@@ -166,6 +167,7 @@
             android:id="@+id/btnPrint"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="invisible"
             android:text="Test Thermal Printer" />
 
     </LinearLayout>
