--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:background="#555555">
 <LinearLayout
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="match_parent"
     android:background="#555555"
     android:orientation="vertical" >
 
@@ -758,6 +758,27 @@
             android:text="\?"
             android:textAppearance="?android:attr/textAppearanceLarge" />
     </LinearLayout>
-
+    <LinearLayout
+        android:id="@+id/linearLayout_copyto_udisk"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Button
+            android:layout_width="600sp"
+            android:layout_height="wrap_content"
+            android:background="#111111"
+            android:textColor="#ffffff"
+            android:text="Copy test log to UDisk."
+            android:layout_weight="8"
+            android:id="@+id/copyto_udisk"
+            android:onClick="copyto_udisk_click" />
+        <TextView
+            android:id="@+id/textViewcopyto_udisk"
+            android:layout_width="100sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="Not yet."
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+    </LinearLayout>
 </LinearLayout>
 </ScrollView>
