--- a/app/src/main/res/layout/activity_thermal_printer.xml
+++ b/app/src/main/res/layout/activity_thermal_printer.xml
@@ -200,7 +200,7 @@
             android:text="@string/log"
             android:textColor="@color/blue" />
 
-        <EditText
+        <TextView
             android:id="@+id/edittext_thermalprinter_log"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
